testcases/judge/nginx/autoconf.err


----------------------------------------
checking for C compiler


----------------------------------------
checking for gcc -pipe switch


----------------------------------------
checking for --with-ld-opt="-lpthread"


----------------------------------------
checking for -Wl,-E switch


----------------------------------------
checking for gcc builtin atomic operations

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for C99 variadic macros

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for gcc variadic macros

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for gcc builtin 64 bit byteswap


----------------------------------------
checking for unistd.h


----------------------------------------
checking for inttypes.h


----------------------------------------
checking for limits.h


----------------------------------------
checking for sys/filio.h

objs/autotest.c:3:10: fatal error: sys/filio.h: No such file or directory
    3 | #include <sys/filio.h>
      |          ^~~~~~~~~~~~~
compilation terminated.
----------


#include <sys/filio.h>

int main(void) {
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for sys/param.h


----------------------------------------
checking for sys/mount.h


----------------------------------------
checking for sys/statvfs.h


----------------------------------------
checking for crypt.h


----------------------------------------
checking for epoll

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for O_PATH


----------------------------------------
checking for sendfile()

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for sendfile64()

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for sys/prctl.h


----------------------------------------
checking for prctl(PR_SET_DUMPABLE)

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for prctl(PR_SET_KEEPCAPS)

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for capabilities


----------------------------------------
checking for crypt_r()


----------------------------------------
checking for sys/vfs.h


----------------------------------------
checking for poll()


----------------------------------------
checking for /dev/poll

objs/autotest.c:4:10: fatal error: sys/devpoll.h: No such file or directory
    4 | #include <sys/devpoll.h>
      |          ^~~~~~~~~~~~~~~
compilation terminated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/devpoll.h>

int main(void) {
    int  n, dp; struct dvpoll  dvp;
                  dp = 0;
                  dvp.dp_fds = NULL;
                  dvp.dp_nfds = 0;
                  dvp.dp_timeout = 0;
                  n = ioctl(dp, DP_POLL, &dvp);
                  if (n == -1) return 1;
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for kqueue

objs/autotest.c:4:10: fatal error: sys/event.h: No such file or directory
    4 | #include <sys/event.h>
      |          ^~~~~~~~~~~~~
compilation terminated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/event.h>

int main(void) {
    (void) kqueue();
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for crypt()


----------------------------------------
checking for F_READAHEAD

objs/autotest.c: In function 'main':
objs/autotest.c:7:14: error: 'F_READAHEAD' undeclared (first use in this function)
    7 |     fcntl(0, F_READAHEAD, 1);;
      |              ^~~~~~~~~~~
objs/autotest.c:7:14: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <fcntl.h>

int main(void) {
    fcntl(0, F_READAHEAD, 1);;
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for posix_fadvise()


----------------------------------------
checking for O_DIRECT


----------------------------------------
checking for F_NOCACHE

objs/autotest.c: In function 'main':
objs/autotest.c:7:14: error: 'F_NOCACHE' undeclared (first use in this function)
    7 |     fcntl(0, F_NOCACHE, 1);;
      |              ^~~~~~~~~
objs/autotest.c:7:14: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <fcntl.h>

int main(void) {
    fcntl(0, F_NOCACHE, 1);;
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for directio()

In file included from objs/autotest.c:5:
/opt/riscv/riscv64-linux-musl-cross/riscv64-linux-musl/include/sys/fcntl.h:1:2: warning: #warning redirecting incorrect #include <sys/fcntl.h> to <fcntl.h> [-Wcpp]
    1 | #warning redirecting incorrect #include <sys/fcntl.h> to <fcntl.h>
      |  ^~~~~~~
objs/autotest.c: In function 'main':
objs/autotest.c:8:5: warning: implicit declaration of function 'directio' [-Wimplicit-function-declaration]
    8 |     directio(0, DIRECTIO_ON);;
      |     ^~~~~~~~
objs/autotest.c:8:17: error: 'DIRECTIO_ON' undeclared (first use in this function)
    8 |     directio(0, DIRECTIO_ON);;
      |                 ^~~~~~~~~~~
objs/autotest.c:8:17: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/types.h>
                  #include <sys/fcntl.h>

int main(void) {
    directio(0, DIRECTIO_ON);;
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for statfs()


----------------------------------------
checking for statvfs()


----------------------------------------
checking for dlopen()


----------------------------------------
checking for sched_yield()


----------------------------------------
checking for sched_setaffinity()


----------------------------------------
checking for SO_SETFIB

objs/autotest.c: In function 'main':
objs/autotest.c:7:31: error: 'SO_SETFIB' undeclared (first use in this function)
    7 |     setsockopt(0, SOL_SOCKET, SO_SETFIB, NULL, 0);
      |                               ^~~~~~~~~
objs/autotest.c:7:31: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/socket.h>

int main(void) {
    setsockopt(0, SOL_SOCKET, SO_SETFIB, NULL, 0);
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for SO_REUSEPORT


----------------------------------------
checking for SO_ACCEPTFILTER

objs/autotest.c: In function 'main':
objs/autotest.c:7:31: error: 'SO_ACCEPTFILTER' undeclared (first use in this function); did you mean 'SO_LOCK_FILTER'?
    7 |     setsockopt(0, SOL_SOCKET, SO_ACCEPTFILTER, NULL, 0);
      |                               ^~~~~~~~~~~~~~~
      |                               SO_LOCK_FILTER
objs/autotest.c:7:31: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/socket.h>

int main(void) {
    setsockopt(0, SOL_SOCKET, SO_ACCEPTFILTER, NULL, 0);
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for SO_BINDANY

objs/autotest.c: In function 'main':
objs/autotest.c:7:31: error: 'SO_BINDANY' undeclared (first use in this function)
    7 |     setsockopt(0, SOL_SOCKET, SO_BINDANY, NULL, 0);
      |                               ^~~~~~~~~~
objs/autotest.c:7:31: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/socket.h>

int main(void) {
    setsockopt(0, SOL_SOCKET, SO_BINDANY, NULL, 0);
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for IP_TRANSPARENT


----------------------------------------
checking for IP_BINDANY

objs/autotest.c: In function 'main':
objs/autotest.c:8:31: error: 'IP_BINDANY' undeclared (first use in this function)
    8 |     setsockopt(0, IPPROTO_IP, IP_BINDANY, NULL, 0);
      |                               ^~~~~~~~~~
objs/autotest.c:8:31: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/socket.h>
                  #include <netinet/in.h>

int main(void) {
    setsockopt(0, IPPROTO_IP, IP_BINDANY, NULL, 0);
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for IP_BIND_ADDRESS_NO_PORT


----------------------------------------
checking for IP_RECVDSTADDR

objs/autotest.c: In function 'main':
objs/autotest.c:8:31: error: 'IP_RECVDSTADDR' undeclared (first use in this function); did you mean 'IP_ORIGDSTADDR'?
    8 |     setsockopt(0, IPPROTO_IP, IP_RECVDSTADDR, NULL, 0);
      |                               ^~~~~~~~~~~~~~
      |                               IP_ORIGDSTADDR
objs/autotest.c:8:31: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/socket.h>
                  #include <netinet/in.h>

int main(void) {
    setsockopt(0, IPPROTO_IP, IP_RECVDSTADDR, NULL, 0);
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for IP_SENDSRCADDR

objs/autotest.c: In function 'main':
objs/autotest.c:8:31: error: 'IP_SENDSRCADDR' undeclared (first use in this function)
    8 |     setsockopt(0, IPPROTO_IP, IP_SENDSRCADDR, NULL, 0);
      |                               ^~~~~~~~~~~~~~
objs/autotest.c:8:31: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/socket.h>
                  #include <netinet/in.h>

int main(void) {
    setsockopt(0, IPPROTO_IP, IP_SENDSRCADDR, NULL, 0);
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for IP_PKTINFO


----------------------------------------
checking for IPV6_RECVPKTINFO


----------------------------------------
checking for TCP_DEFER_ACCEPT


----------------------------------------
checking for TCP_KEEPIDLE


----------------------------------------
checking for TCP_FASTOPEN


----------------------------------------
checking for TCP_INFO


----------------------------------------
checking for accept4()


----------------------------------------
checking for eventfd()


----------------------------------------
checking for int size


----------------------------------------
checking for long size


----------------------------------------
checking for long long size


----------------------------------------
checking for void * size


----------------------------------------
checking for uint32_t


----------------------------------------
checking for uint64_t


----------------------------------------
checking for sig_atomic_t


----------------------------------------
checking for sig_atomic_t size


----------------------------------------
checking for socklen_t


----------------------------------------
checking for in_addr_t


----------------------------------------
checking for in_port_t


----------------------------------------
checking for rlim_t


----------------------------------------
checking for uintptr_t


----------------------------------------
checking for system byte ordering


----------------------------------------
checking for size_t size


----------------------------------------
checking for off_t size


----------------------------------------
checking for time_t size


----------------------------------------
checking for AF_INET6


----------------------------------------
checking for setproctitle()

objs/autotest.c: In function 'main':
objs/autotest.c:7:5: warning: implicit declaration of function 'setproctitle' [-Wimplicit-function-declaration]
    7 |     setproctitle("test");;
      |     ^~~~~~~~~~~~
/opt/riscv/riscv64-linux-musl-cross/bin/../lib/gcc/riscv64-linux-musl/11.2.1/../../../../riscv64-linux-musl/bin/ld: /tmp/cckhfJne.o: in function `.L0 ':
autotest.c:(.text+0x10): undefined reference to `setproctitle'
collect2: error: ld returned 1 exit status
----------

#include <sys/types.h>
#include <unistd.h>
#include <stdlib.h>

int main(void) {
    setproctitle("test");;
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for pread()


----------------------------------------
checking for pwrite()


----------------------------------------
checking for pwritev()


----------------------------------------
checking for sys_nerr

objs/autotest.c: In function 'main':
objs/autotest.c:8:18: error: 'sys_nerr' undeclared (first use in this function)
    8 |     printf("%d", sys_nerr);;
      |                  ^~~~~~~~
objs/autotest.c:8:18: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <errno.h>
                  #include <stdio.h>

int main(void) {
    printf("%d", sys_nerr);;
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for _sys_nerr

objs/autotest.c: In function 'main':
objs/autotest.c:8:18: error: '_sys_nerr' undeclared (first use in this function)
    8 |     printf("%d", _sys_nerr);;
      |                  ^~~~~~~~~
objs/autotest.c:8:18: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>
#include <errno.h>
                      #include <stdio.h>

int main(void) {
    printf("%d", _sys_nerr);;
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for maximum errno

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for localtime_r()


----------------------------------------
checking for clock_gettime(CLOCK_MONOTONIC)


----------------------------------------
checking for posix_memalign()


----------------------------------------
checking for memalign()


----------------------------------------
checking for mmap(MAP_ANON|MAP_SHARED)

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for mmap("/dev/zero", MAP_SHARED)

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for System V shared memory

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for POSIX semaphores

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for POSIX semaphores in libpthread

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for POSIX semaphores in librt

/bin/sh: 1: objs/autotest: Exec format error

----------------------------------------
checking for struct msghdr.msg_control


----------------------------------------
checking for ioctl(FIONBIO)


----------------------------------------
checking for struct tm.tm_gmtoff


----------------------------------------
checking for struct dirent.d_namlen

objs/autotest.c: In function 'main':
objs/autotest.c:8:29: error: 'struct dirent' has no member named 'd_namlen'; did you mean 'd_name'?
    8 |     struct dirent  dir; dir.d_namlen = 0;
      |                             ^~~~~~~~
      |                             d_name
objs/autotest.c:9:42: error: 'struct dirent' has no member named 'd_namlen'; did you mean 'd_name'?
    9 |                   printf("%d", (int) dir.d_namlen);
      |                                          ^~~~~~~~
      |                                          d_name
----------

#include <sys/types.h>
#include <unistd.h>
#include <dirent.h>
                  #include <stdio.h>

int main(void) {
    struct dirent  dir; dir.d_namlen = 0;
                  printf("%d", (int) dir.d_namlen);
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for struct dirent.d_type


----------------------------------------
checking for sysconf(_SC_NPROCESSORS_ONLN)


----------------------------------------
checking for sysconf(_SC_LEVEL1_DCACHE_LINESIZE)

objs/autotest.c: In function 'main':
objs/autotest.c:7:13: error: '_SC_LEVEL1_DCACHE_LINESIZE' undeclared (first use in this function)
    7 |     sysconf(_SC_LEVEL1_DCACHE_LINESIZE);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~
objs/autotest.c:7:13: note: each undeclared identifier is reported only once for each function it appears in
----------

#include <sys/types.h>
#include <unistd.h>


int main(void) {
    sysconf(_SC_LEVEL1_DCACHE_LINESIZE);
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------

----------------------------------------
checking for openat(), fstatat()


----------------------------------------
checking for getaddrinfo()


----------------------------------------
checking for atomic_ops library

/opt/riscv/riscv64-linux-musl-cross/bin/../lib/gcc/riscv64-linux-musl/11.2.1/../../../../riscv64-linux-musl/bin/ld: /tmp/ccHHPomg.o: in function `.L0 ':
autotest.c:(.text+0x14): undefined reference to `AO_pt_lock'
/opt/riscv/riscv64-linux-musl-cross/bin/../lib/gcc/riscv64-linux-musl/11.2.1/../../../../riscv64-linux-musl/bin/ld: autotest.c:(.text+0x40): undefined reference to `AO_pt_lock'
collect2: error: ld returned 1 exit status
----------

#include <sys/types.h>
#include <unistd.h>
#define AO_REQUIRE_CAS
                      #include <atomic_ops.h>

int main(void) {
    long  n = 0;
                      if (!AO_compare_and_swap(&n, 0, 1))
                          return 1;
                      if (AO_fetch_and_add(&n, 1) != 1)
                          return 1;
                      if (n != 2)
                          return 1;
                      AO_nop();;
    return 0;
}

----------
/opt/riscv/riscv64-linux-musl-cross/bin/riscv64-linux-musl-gcc -DAO_USE_PTHREAD_DEFS=1 -DNGX_HAVE_MAP_ANON=1 -DNGX_HAVE_LIBATOMIC=1 -DNGX_SYS_NERR=150 -Isrc/libatomic_ops -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -lpthread
----------
